<resources>
    <string name="app_name">Raygun4Android Sample App</string>
    <string name="app_version_text">App %1$s (%2$d %3$s)</string>
    <string name="provider_version_text">Provider %1$s (%2$d %3$s)</string>
    <string name="send_an_error">Send an error</string>
    <string name="crash_app">Crash app</string>
    <string name="set_user_anonymous">Set user anonymous</string>
    <string name="set_user_a">Set user A</string>
    <string name="set_user_b">Set user B</string>
    <string name="handle_crash">Handle Crash</string>
    <string name="go_to_a_second_activity">Go to a second Activity</string>
    <string name="hello_world_main_activity">Hello World! Main Activity!</string>
    <string name="hello_world_second_activity">Hello World! Second Activity!</string>
    <string name="you_have_just_sent_an_error_with_raygun4android">You have just sent an error with Raygun4Android.</string>
    <string name="you_just_created_and_caught_an_exception">You just created and caught an exception.</string>
    <string name="user_is_now_set_to_anonymous_for_future_raygun_reports">User is now set to \'Anonymous\' for future Raygun reports.</string>
    <string name="user_is_now_set_to_user_a_for_future_raygun_reports">User is now set to \'User A\' for future Raygun reports.</string>
    <string name="user_is_now_set_to_user_b_for_future_raygun_reports">User is now set to \'User B\' for future Raygun reports.</string>
    <string name="we_re_now_on_the_second_activity_screen">We\'re now on the second activity screen.</string>
    <string name="we_returned_to_first_activity">We\'re now back from second activity.</string>
    <string name="fragment_text">Fragment Screen</string>
    <string name="go_to_a_navigation_activity">Go to a navigation Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentswap1_title">FragmentSwap1</string>
    <string name="go_to_fragmentswap2">Go to FragmentSwap2</string>
    <string name="fragmentswap2_title">FragmentSwap2</string>
    <string name="go_to_fragmentswap1">Go to FragmentSwap1</string>
    <string name="fragment_swap_text">Fragment Swap Screen</string>
    <string name="go_to_a_fragment_swap_activity">Go to a Fragment swap Activity</string>
</resources>
